--- a/customsearch.html
+++ b/customsearch.html
@@ -1,4 +1,7 @@
-<html>
+<!DOCTYPE HTML>
+
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
+  
   <head>
     <title>Custom Search JSON API Example</title>
   </head>
