--- a/customsearch.html
+++ b/customsearch.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
-  
-  <head>
-    <title>Custom Search JSON API Example</title>
-  </head>
-  <body>
-    <div id="content"></div>
-    <script>
-      function hndlr(response) {
-      for (var i = 0; i < response.items.length; i++) {
-        var item = response.items[i];
-        // in production code, item.htmlTitle should have the HTML entities escaped.
-        document.getElementById("content").innerHTML += "<br>" + item.htmlTitle;
-      }
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<head>
+  <title>Custom Search JSON API Example</title>
+</head>
+<body>
+  <div id="content"></div>
+  <script>
+    function hndlr(response) {
+    for (var i = 0; i < response.items.length; i++) {
+      var item = response.items[i];
+      // in production code, item.htmlTitle should have the HTML entities escaped.
+      document.getElementById("content").innerHTML += "<br>" + item.htmlTitle;
     }
-    </script>
-    <script src="https://www.googleapis.com/customsearch/v1?key=YOUR-KEY&cx=017576662512468239146:omuauf_lfve&q=cars&callback=hndlr">
-    </script>
-  </body>
+  }
+  </script>
+  <script src="https://www.googleapis.com/customsearch/v1?key=YOUR-KEY&cx=017576662512468239146:omuauf_lfve&q=cars&callback=hndlr">
+  </script>
+</body>
 </html>
