--- a/customsearch.html
+++ b/customsearch.html
@@ -7,5 +7,9 @@
 </head>
 <body>
 Test page
+<div1>...</div1>
+<script async src="https://cse.google.com/cse.js?cx=b8d5be5f869904559"></script>
+<div class="gcse-search"></div>
+<div2>...</div2>
 </body>
 </html>
