--- a/customsearch.html
+++ b/customsearch.html
@@ -6,7 +6,7 @@
   <title>Custom Search JSON API Example</title>
 </head>
 <body>
-Test page
+Custom Search with Google Scholar
 <div1>...</div1>
 <script async src="https://cse.google.com/cse.js?cx=b8d5be5f869904559"></script>
 <div class="gcse-search"></div>
