--- a/customsearch.html
+++ b/customsearch.html
@@ -9,7 +9,7 @@
 Custom Search with Google Scholar
 <div1>...</div1>
 <script async src="https://cse.google.com/cse.js?cx=b8d5be5f869904559"></script>
-<div class="gcse-search"></div>
+<div class="gcse-searchbox"> and <div class="gcse-searchresults">
 <div2>...</div2>
 </body>
 </html>
